# shell

./: README.md  setup.cfg
shell/: __init__.py
src/shell/: __init__.py  api.py  bin.py  classes.py  exceptions.py
