[metadata]
name = shell
version = 0.1.0

[options]
package_dir=
    =src
packages = find:
install_requires =
    execute_timer @ git+https://www.github.com/denwong47/execute_timer
python_requires = >=3.8

[options.packages.find]
where=src

[options.extras_require]
test = quicktest @ git+https://github.com/denwong47/quicktest